--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello world
-
-    </title>
+    <title>hello Lena</title>
+    <h2>it is my priject with github</h2>
 </head>
 
 <body>
